syntax = "proto3";
package proto.providers;

option go_package = "config/deploymentConfigurations/providers";

import "proto/deploymentConfigurations/permissions/Permissions.proto";
// Configuration for the clouddriver microservice.
message Google {

    bool enabled = 1;
    string primaryAccount = 2;
    repeated GoogleAcc accounts = 3;
    GoogleBakeryDefaults bakeryDefault = 4;
    
}

message GoogleAcc {

    string name = 1;
    repeated string requiredGroupMembership = 2;
    permissions.Permissions permissions = 3;
    string project = 4;
    string jsonPath = 5;
    bool alphaListed = 6;
    repeated string imageProjects = 7;
    Consul consul = 8;
    string environment = 9;

}

message Consul {

    bool enabled = 1;
    string agentEndpoint = 2;
    int32 agentPort = 3;
    repeated string datacenters = 4;
    repeated string regions = 5;

}

message GoogleBakeryDefaults {
    string templateFile = 1;
    GoogleBaseImages baseImages = 2;
    string zone = 3;
    string network = 4;
    bool useInternalIp = 5;
}

message GoogleBaseImages {

    GoogleBaseImage baseImage = 1;
    

}

message GoogleBaseImage {
    string id = 1;
    string shortDescription = 2;
    string detailedDescription = 3;
    string packageType = 4;
    string templateFile = 5;
    bool imageFamily = 6;
    GoogleVirtualizationSettings virtualizationSettings = 7;
}

message GoogleVirtualizationSettings {
    string sourceImage = 1;
    string sourceImageFamily = 2;

}

/*

Example Config:

    google:
      enabled: false
      accounts:
      - name: google
        environment: dev
        requiredGroupMembership:
        - dev
        - test
        permissions:
          READ:
          - dev,test
          WRITE:
          - dev,test
        project: project
        jsonPath: /home/spinnaker/.hal/config
        alphaListed: true
        imageProjects:
        - one
        - two
        consul:
          enabled: false
          agentEndpoint: localhost
          agentPort: 8500
          datacenters: []
        userDataFile: /home/spinnaker/.hal/config
        regions:
        - us-central1
      primaryAccount: google
      bakeryDefaults:
        templateFile: gce.json
        baseImages:
        - baseImage:
            id: some-image
            shortDescription: test
            detailedDescription: test
            packageType: deb
            templateFile: temp.json
            imageFamily: true
          virtualizationSettings:
            sourceImage: image
            sourceImageFamily: image
        zone: us-central1-f
        network: default
        useInternalIp: false


*/
